Adding a test class